--- a/style.css
+++ b/style.css
@@ -1,3 +1,137 @@
+@import url('https://fonts.googleapis.com/css2?family=Comfortaa:wght@500&display=swap');
+
 body {
   padding: 0;
+  font-family: 'Comfortaa', cursive;
+}
+
+.flex-center {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.container {
+  width: 80%;
+}
+
+main {
+  width: 100%;
+  height: 80vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
+nav {
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  border: 3px solid black;
+}
+
+a {
+  text-decoration: none;
+  color: black;
+}
+
+.nav-link a {
+  margin-right: 30px;
+  font-size: 18px;
+  font-weight: bold;
+}
+
+.nav-link a:hover {
+  color: blue;
+}
+
+.active {
+  color: blue;
+}
+
+.list-book-container {
+  width: 100%;
+  margin-top: 100px;
+}
+
+.book-container {
+  border: 3px solid black;
+}
+
+.text-center {
+  text-align: center;
+}
+
+.book-list {
+  display: flex;
+  width: 100%;
+  justify-content: space-between;
+}
+
+.p-list {
+  display: flex;
+  flex-direction: row;
+  width: 50%;
+  font-size: 18px;
+  font-weight: bold;
+}
+
+.p-list p {
+  margin: 0;
+  padding: 6px;
+}
+
+.book-list:nth-child(odd) {
+  background-color: #ddd;
+}
+
+.container-form {
+  margin-top: 100px;
+}
+
+form {
+  width: 300px;
+}
+
+input {
+  padding: 10px 0 10px 0;
+  margin-bottom: 10px;
+  width: 100%;
+}
+
+.add-btn-div {
+  width: 100%;
+  text-align: end;
+}
+
+#addBtn {
+  padding: 5px;
+}
+
+.remove {
+  background: white;
+  width: 100px;
+  border: 2px solid black;
+}
+
+.notice {
+  text-align: center;
+  font-size: 18px;
+}
+
+.contact-info {
+  margin-top: 100px;
+}
+
+.copyright {
+  align-self: flex-start;
+  font-size: 17px;
+  font-weight: bold;
+  border: 3px solid black;
+  width: 100%;
+}
+
+.hidden {
+  display: none;
 }
