--- a/index.css
+++ b/index.css
@@ -1,8 +1,8 @@
-@import url('https://fonts.googleapis.com/css2?family=Comfortaa:wght@500&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Varela+Round&display=swap');
 
 body {
   padding: 0;
-  font-family: 'Comfortaa', cursive;
+  font-family: 'Varela Round', sans-serif;
 }
 
 .flex-center {
